--- a/Home/style.css
+++ b/Home/style.css
@@ -44,6 +44,7 @@
     max-width: 95px;
 }
 
+
 .fa-bars {
     height: 42px;
     width: 42px;
@@ -60,6 +61,19 @@
 .fa-bars:hover {
     color: #027EBC;
     border: 2px solid #027EBC;
+}
+
+.center_menu_bar{
+    background-color: white;
+    height: 1px;
+    width: 20px;
+    margin: 2.3px;
+}
+
+.menu_bar:hover .menu{
+    color: #027EBC;
+    background-color: #027EBC;
+    border: 1.5px solid #027EBC;
 }
 
 .whatsapp {
